--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.6.6",
-    "highlight.js": "11.9.0"
+    "@storybook/addon-knobs": "^8.0.1",
+    "@vincjo/datatables": "^1.14.10",
+    "highlight.js": "11.9.0",
+    "svelte-icons-pack": "^3.1.3"
   },
   "eslintConfig": {
     "extends": [
