--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@floating-ui/dom": "1.6.6",
     "@storybook/addon-actions": "^8.1.11",
     "@storybook/addon-knobs": "^8.0.1",
+    "@storybook/testing-library": "^0.2.2",
     "@vincjo/datatables": "^1.14.10",
     "highlight.js": "11.9.0",
     "svelte-icons-pack": "^3.1.3"
